create divs for additional dog images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
   </head>
   <body>
     <div class="step1">
+      <img src="img/step1.png" alt="">
+    </div>
+    <div class="step2">
       <img src="img/step2.png" alt="">
+    </div>
+    <div class="step3">
+      <img src="img/step3.png" alt="">
+    </div>
+    <div class="step4">
+      <img src="img/step4.png" alt="">
+    </div>
+    <div class="step5">
+      <img src="img/step5.png" alt="">
+    </div>
+    <div class="step6">
+      <img src="img/step6.png" alt="">
+    </div>
+    <div class="step7">
+      <img src="img/step7.png" alt="">
     </div>
   </body>
 </html>
