create media queries for images and fix image names

--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
     <div class="step7">
       <img src="img/step7.png" alt="">
     </div>
+    <div class="step8">
+      <img src="img/step8.png" alt="">
+    </div>
   </body>
 </html>
